test/corpus/expressions.txt
================================================================================
Pipes
================================================================================

module palm

fn add() {
  "hello"
    |> iodata.new
    |> iodata.reverse
}

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (function
    (identifier)
    (binary_expression
      (binary_expression
        (string
          (quoted_content))
        (field_access
          (identifier)
          (label)))
      (field_access
        (identifier)
        (label)))))

================================================================================
When
================================================================================

module palm

pub fn main() {
  when a + 5 + 8 {
     11 -> 123
     _ -> 0
  }
  when b {
    1 -> "Hello"
    2 -> "Game"
    3 || 4 -> "Threes"
    { 5 * 1 } && { 5 + 1 } -> "Threes"
    _ -> "World"
  }
  when {
     1 -> 1
     _ -> 0
  }
}

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (function
    (visibility_modifier)
    (identifier)
    (when
      (binary_expression
        (binary_expression
          (identifier)
          (integer))
        (integer))
      (when_entry
        (integer)
        (integer))
      (when_entry
        (integer)))
    (when
      (identifier)
      (when_entry
        (integer)
        (string
          (quoted_content)))
      (when_entry
        (integer)
        (string
          (quoted_content)))
      (when_entry
        (binary_expression
          (integer)
          (integer))
        (string
          (quoted_content)))
      (when_entry
        (binary_expression
          (expression_group
            (binary_expression
              (integer)
              (integer)))
          (expression_group
            (binary_expression
              (integer)
              (integer))))
        (string
          (quoted_content)))
      (when_entry
        (string
          (quoted_content))))
    (when
      (when_entry
        (integer)
        (integer))
      (when_entry
        (integer)))))

================================================================================
If
================================================================================

module palm

pub fn main() {
  if a + 5 > 10 {
    5
  }
  1
}

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (function
    (visibility_modifier)
    (identifier)
    (if
      (binary_expression
        (binary_expression
          (identifier)
          (integer))
        (integer))
      (integer))
    (integer)))
