test/corpus/function.txt
================================================================================
Function - Simple
================================================================================

module palm

pub fn main() {
  let a = "123"
  let b = 5
  let c = 5.1
  when b {
    1 -> "Hello"
    _ -> "World"
  }
}

pub fn add(a: Int, b: Int) -> Int {
  a + b
}

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (function
    (visibility_modifier)
    (identifier)
    (let
      (identifier)
      (string
        (quoted_content)))
    (let
      (identifier)
      (integer))
    (let
      (identifier)
      (float))
    (when
      (identifier)
      (when_entry
        (integer)
        (string
          (quoted_content)))
      (when_entry
        (string
          (quoted_content)))))
  (function
    (visibility_modifier)
    (identifier)
    (field
      (identifier)
      (type
        (type_identifier)))
    (field
      (identifier)
      (type
        (type_identifier)))
    (return_type
      (type
        (type_identifier)))
    (binary_expression
      (identifier)
      (identifier))))
