test/corpus/import_statements.txt
================================================================================
Import statements
================================================================================

import github/pyros2097/std

--------------------------------------------------------------------------------

(module
  (import_statement
    (identifier)
    (identifier)
    (identifier)))
