test/corpus/record.txt
================================================================================
Record - Simple
================================================================================

module std

record Cat
  firstName: String
  middleName: String
  lastName: String
  age : Int

record Dog
  name: String

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (record
    (type_identifier)
    (type_field
      (identifier)
      (identifier))
    (type_field
      (identifier)
      (identifier))
    (type_field
      (identifier)
      (identifier))
    (type_field
      (identifier)
      (identifier)))
  (record
    (type_identifier)
    (type_field
      (identifier)
      (identifier))))

================================================================================
Record - Generic
================================================================================

module std

record Shape(a)
  name: String
  area: a

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (record
    (type_identifier)
    (generic_list
      (identifier))
    (type_field
      (identifier)
      (identifier))
    (type_field
      (identifier)
      (identifier))))
