test/corpus/type.txt
================================================================================
Type - Simple
================================================================================

module palm

type User = Guest | LoggedIn(name: String, session_id: String)

type Cat(
  firstName: String,
  middleName: String,
  lastName: String,
  age: Int
)

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (type
    (type_identifier)
    (union
      (type_identifier))
    (union
      (type_identifier)
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier))))
  (type
    (type_identifier)
    (record
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier)))))

================================================================================
Type - Generic
================================================================================

module palm

type User(a) = Guest | LoggedIn(name: a, age: Int)

type Option(a) = Some(a) | None

type Result(a, b) = Ok(a) | Error(b)

type Cat(a)(
  name: a,
  age: Int
)

--------------------------------------------------------------------------------

(source_file
  (module
    (module_name))
  (type
    (type_identifier)
    (generic_list
      (identifier))
    (union
      (type_identifier))
    (union
      (type_identifier)
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier))))
  (type
    (type_identifier)
    (generic_list
      (identifier))
    (union
      (type_identifier)
      (identifier))
    (union
      (type_identifier)))
  (type
    (type_identifier)
    (generic_list
      (identifier)
      (identifier))
    (union
      (type_identifier)
      (identifier))
    (union
      (type_identifier)
      (identifier)))
  (type
    (type_identifier)
    (generic_list
      (identifier))
    (record
      (type_field
        (identifier)
        (identifier))
      (type_field
        (identifier)
        (identifier)))))